Forms no longer disabled when trying to buy a license and not being logged in Startdate on licenses now visible on profile

--- a/src/app/components/buyLystfisketegn/buyLystfisketegn.component.scss
+++ b/src/app/components/buyLystfisketegn/buyLystfisketegn.component.scss
@@ -30,3 +30,7 @@ input::-webkit-inner-spin-button {
 input[type="number"] {
   -moz-appearance: textfield;
 }
+
+.uppercase {
+  text-transform: capitalize;
+}
